--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
 }
-apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 30
@@ -36,9 +37,34 @@ android {
     buildFeatures {
         dataBinding true
     }
+
+    kapt {
+        correctErrorTypes true
+    }
 }
 
 dependencies {
+    // Dagger 2 & Hilt
+    def hilt_version = '2.38.1'
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+    implementation 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+
+    implementation("com.google.dagger:dagger:2.38.1")
+    kapt("com.google.dagger:dagger-compiler:2.38.1")
+
+    // For instrumentation tests
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+
     def nav_version = "2.3.5"
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -49,9 +75,6 @@ dependencies {
 
     // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-
-    implementation("com.google.dagger:dagger:2.38.1")
-    kapt("com.google.dagger:dagger-compiler:2.38.1")
 
     implementation("androidx.navigation:navigation-runtime-ktx:2.3.5")
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
@@ -64,7 +87,7 @@ dependencies {
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.5")
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1-native-mt')
 
     def sresult_version = "1.3.8"
     implementation("com.github.Rasalexman.SResult:sresult:$sresult_version")
