Add modules: core, model, data, domain, presentation to split the application into layers

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,10 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "TimeKillerApp"
+
 include ':app'
+include ':core'
+include ':model'
+include ':data'
+include ':domain'
+include ':presentation'
