--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,10 +32,15 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':domain')
+
+    def sresult_version = "1.3.8"
+    implementation("com.github.Rasalexman.SResult:sresult:$sresult_version")
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation project(path: ':core')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
