--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    def sresult_version = "1.3.8"
+    implementation("com.github.Rasalexman.SResult:sresult:$sresult_version")
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
