--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ rootProject.name = "TimeKillerApp"
 
 include ':app'
 include ':core'
-include ':model'
 include ':data'
 include ':domain'
 include ':presentation'
+include ':models'
